OO-6874: Project report with chronological order